correction du css de popup dans rendez-vous et compte rendu