@@ -11,31 +11,29 @@ import models.CompteRenduSeance;
 import models.CompteRenduView;
 import services.PdfCompteRenduService;
 import services.ServiceCompteRenduSeance;
+import services.Paginator;
 import utils.MyDatabase;
 import utils.Session;
-import services.Paginator;
+
 import java.io.File;
 import java.nio.file.Path;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * ROLE PATIENT : lecture seulement des comptes-rendus de SES rendez-vous.
- * ✅ Pagination avancée
  */
 public class CompteRenduReadController {
 
     @FXML private TextField searchField;
     @FXML private VBox compteRenduContainer;
 
-    // ✅ Pagination UI (à ajouter dans FXML)
+    // ✅ Pagination UI
     @FXML private Button btnPrev;
     @FXML private Button btnNext;
     @FXML private Label pageLabel;
     @FXML private ComboBox<Integer> pageSizeCombo;
-    @FXML private javafx.scene.control.ScrollPane listScroll;
 
     private final Paginator paginator = new Paginator();
 
@@ -45,92 +43,108 @@ public class CompteRenduReadController {
     @FXML
     public void initialize() {
         crService = new ServiceCompteRenduSeance(cnx);
-
+        // ✅ Pagination setup (4,6,8,10)
         if (pageSizeCombo != null) {
             pageSizeCombo.setItems(FXCollections.observableArrayList(4, 6, 8, 10));
-            pageSizeCombo.getSelectionModel().select(Integer.valueOf(4));
-            pageSizeCombo.valueProperty().addListener((obs, o, n) -> {
-                paginator.setPageSize(n == null ? 4 : n);
-                paginator.setPage(1);
-                loadCompteRendus();
-            });
+            pageSizeCombo.setValue(4);
             paginator.setPageSize(4);
-        }
-
-        if (searchField != null) {
-            searchField.textProperty().addListener((obs, o, n) -> {
-                paginator.setPage(1);
-                loadCompteRendus();
+            pageSizeCombo.valueProperty().addListener((obs, o, n) -> {
+                if (n != null) {
+                    paginator.setPageSize(n);
+                    loadCompteRendus();
+                }
             });
         }
 
         loadCompteRendus();
+
+        if (searchField != null) {
+            searchField.textProperty().addListener((obs, o, n) -> { paginator.first(); loadCompteRendus(); });
+        }
     }
 
+    // ── Pagination actions ───────────────────────────────────────────────
     @FXML
     private void prevPage() {
-        if (paginator.getPage() > 1) {
-            paginator.setPage(paginator.getPage() - 1);
+        if (paginator.canPrev()) {
+            paginator.prev();
             loadCompteRendus();
         }
     }
 
     @FXML
     private void nextPage() {
-        if (paginator.getPage() < paginator.getTotalPages()) {
-            paginator.setPage(paginator.getPage() + 1);
+        if (paginator.canNext()) {
+            paginator.next();
             loadCompteRendus();
         }
     }
 
+    private void updatePaginationUI() {
+        int tp = paginator.getTotalPages();
+        int p = paginator.getPage();
+
+        if (tp <= 0) {
+            if (pageLabel != null) pageLabel.setText("Page 1/1");
+            if (btnPrev != null) btnPrev.setDisable(true);
+            if (btnNext != null) btnNext.setDisable(true);
+            return;
+        }
+
+        if (pageLabel != null) pageLabel.setText("Page " + p + "/" + tp);
+        if (btnPrev != null) btnPrev.setDisable(!paginator.canPrev());
+        if (btnNext != null) btnNext.setDisable(!paginator.canNext());
+    }
+
     private void loadCompteRendus() {
         try {
-            List<CompteRenduView> all = crService.findViewsByPatient(Session.getUserId());
+            List<CompteRenduView> list = crService.findViewsByPatient(Session.getUserId());
 
             String kw = (searchField == null) ? "" : searchField.getText().toLowerCase().trim();
             if (!kw.isEmpty()) {
-                all = all.stream().filter(cr ->
+                list = list.stream().filter(cr ->
                         (cr.getPsychologistFullName() != null && cr.getPsychologistFullName().toLowerCase().contains(kw))
                                 || (cr.getResumeSeanceCr() != null && cr.getResumeSeanceCr().toLowerCase().contains(kw))
                                 || (cr.getProchainesActionCr() != null && cr.getProchainesActionCr().toLowerCase().contains(kw))
                                 || (cr.getProgresCr() != null && cr.getProgresCr().name().toLowerCase().contains(kw))
-                ).collect(Collectors.toList());
+                ).toList();
             }
 
-            paginator.setTotalItems(all.size());
-            int start = paginator.getOffset();
-            int end = Math.min(start + paginator.getPageSize(), all.size());
-            List<CompteRenduView> pageItems = (start >= end) ? List.of() : all.subList(start, end);
 
-            updatePagerUi();
+            // ✅ Pagination (après filtre)
+            paginator.setTotalItems(list.size());
+            int from = paginator.getOffset();
+            if (from >= list.size() && paginator.getTotalPages() > 0) {
+                paginator.setPage(paginator.getTotalPages());
+                from = paginator.getOffset();
+            }
+            int to = Math.min(from + paginator.getPageSize(), list.size());
+            List<CompteRenduView> pageList = (from < to) ? list.subList(from, to) : java.util.Collections.emptyList();
+
+            updatePaginationUI();
 
             compteRenduContainer.getChildren().clear();
 
-            if (pageItems.isEmpty()) {
-                Label empty = new Label(all.isEmpty() ? "Aucun compte-rendu trouvé." : "Aucun résultat sur cette page.");
+
+            if (pageList.isEmpty()) {
+                Label empty = new Label("Aucun compte-rendu trouvé.");
                 empty.setStyle("-fx-text-fill:#666; -fx-font-size: 14px; -fx-padding: 10 0 0 0;");
                 compteRenduContainer.getChildren().add(empty);
                 return;
             }
 
             HBox row = null;
-            for (int i = 0; i < pageItems.size(); i++) {
-                if (i % 3 == 0) {
+            for (int i = 0; i < pageList.size(); i++) {
+                if (i % 2 == 0) {
                     row = new HBox(15);
                     compteRenduContainer.getChildren().add(row);
                 }
-                row.getChildren().add(buildCard(pageItems.get(i)));
+                row.getChildren().add(buildCard(pageList.get(i)));
             }
 
         } catch (SQLException e) {
             showError("Erreur chargement", e);
         }
-    }
-
-    private void updatePagerUi() {
-        if (pageLabel != null) pageLabel.setText("Page " + paginator.getPage() + "/" + paginator.getTotalPages());
-        if (btnPrev != null) btnPrev.setDisable(paginator.getPage() <= 1);
-        if (btnNext != null) btnNext.setDisable(paginator.getPage() >= paginator.getTotalPages());
     }
 
     private VBox buildCard(CompteRenduView cr) {
@@ -145,6 +159,7 @@ public class CompteRenduReadController {
                 -fx-border-color: #E7E7E7;
                 """);
 
+        // Date RDV
         HBox dateRow = new HBox(8);
         dateRow.setAlignment(Pos.CENTER_LEFT);
         Region calIcon = svgIcon(
@@ -161,6 +176,7 @@ public class CompteRenduReadController {
         Label title = new Label("Compte-rendu de séance");
         title.setStyle("-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill:#111;");
 
+        // Psychologue
         HBox psyRow = new HBox(8);
         psyRow.setAlignment(Pos.CENTER_LEFT);
         Region userIcon = svgIcon(
@@ -180,6 +196,7 @@ public class CompteRenduReadController {
         VBox resumeBox = buildSection("RÉSUMÉ DE SÉANCE", cr.getResumeSeanceCr());
         VBox actionsBox = buildSection("PROCHAINES ACTIONS", cr.getProchainesActionCr());
 
+        // ✅ Icône export PDF (comme psy)
         HBox actionRow = new HBox(10);
         actionRow.setAlignment(Pos.CENTER_LEFT);
 
@@ -196,6 +213,7 @@ public class CompteRenduReadController {
         return card;
     }
 
+    // ✅ EXPORT PDF
     private void handleExportPdf(CompteRenduView cr) {
         try {
             FileChooser fc = new FileChooser();
@@ -207,6 +225,7 @@ public class CompteRenduReadController {
 
             String fileName = "CompteRendu_" + psyName + "_" +
                     (cr.getRvDate() == null ? "" : cr.getRvDate().toString()) + ".pdf";
+
             fc.setInitialFileName(fileName);
 
             File file = fc.showSaveDialog(compteRenduContainer.getScene().getWindow());
@@ -216,6 +235,7 @@ public class CompteRenduReadController {
             PdfCompteRenduService.exportCompteRendu(cr, out, "Patient");
 
             Alert success = new Alert(Alert.AlertType.INFORMATION);
+            stylePopup(success.getDialogPane());
             success.setTitle("Export réussi");
             success.setHeaderText("PDF exporté avec succès ✅");
             success.setContentText(file.getAbsolutePath());
@@ -227,6 +247,7 @@ public class CompteRenduReadController {
         }
     }
 
+    // ─────────────── Rating (garder comme ton code) ───────────────
     private HBox buildRatingRow(CompteRenduView cr) {
         HBox row = new HBox(10);
         row.setAlignment(Pos.CENTER_LEFT);
@@ -314,11 +335,26 @@ public class CompteRenduReadController {
             style = "-fx-background-color: #F1F5F9; -fx-text-fill: #64748B;";
         } else {
             switch (progrescr) {
-                case amelioration_significative -> { text = "Amélioration Significative"; style = "-fx-background-color: #DCFCE7; -fx-text-fill: #16A34A;"; }
-                case amelioration_legere -> { text = "Amélioration Légère"; style = "-fx-background-color: #D1FAE5; -fx-text-fill: #059669;"; }
-                case amelioration_stable -> { text = "Amélioration Stable"; style = "-fx-background-color: #DBEAFE; -fx-text-fill: #1D4ED8;"; }
-                case stagnation -> { text = "Stagnation"; style = "-fx-background-color: #FEF9C3; -fx-text-fill: #D97706;"; }
-                default -> { text = progrescr.name(); style = "-fx-background-color: #F1F5F9; -fx-text-fill: #64748B;"; }
+                case amelioration_significative -> {
+                    text  = "Amélioration Significative";
+                    style = "-fx-background-color: #DCFCE7; -fx-text-fill: #16A34A;";
+                }
+                case amelioration_legere -> {
+                    text  = "Amélioration Légère";
+                    style = "-fx-background-color: #D1FAE5; -fx-text-fill: #059669;";
+                }
+                case amelioration_stable -> {
+                    text  = "Amélioration Stable";
+                    style = "-fx-background-color: #DBEAFE; -fx-text-fill: #1D4ED8;";
+                }
+                case stagnation -> {
+                    text  = "Stagnation";
+                    style = "-fx-background-color: #FEF9C3; -fx-text-fill: #D97706;";
+                }
+                default -> {
+                    text  = progrescr.name();
+                    style = "-fx-background-color: #F1F5F9; -fx-text-fill: #64748B;";
+                }
             }
         }
         Label badge = new Label("✦  " + text);
@@ -363,9 +399,21 @@ public class CompteRenduReadController {
     private void showError(String title, Exception e) {
         e.printStackTrace();
         Alert a = new Alert(Alert.AlertType.ERROR);
+        stylePopup(a.getDialogPane());
         a.setTitle(title);
         a.setHeaderText(title);
         a.setContentText(e.getMessage());
         a.showAndWait();
+    }
+
+    // ===================== Popup theme helper =====================
+    private void stylePopup(DialogPane pane) {
+        try {
+            if (pane == null) return;
+            pane.getStyleClass().add("mc-dialog");
+            var css = getClass().getResource("/popup.css");
+            if (css != null) pane.getStylesheets().add(css.toExternalForm());
+        } catch (Exception ignored) {
+        }
     }
 }
